--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "ENV3/bin/python",
+    "python.pythonPath": "/bin/python3",
     "compile-hero.disable-compile-files-on-did-save-code": true
 }
