rename project of WebServer To Core

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ django-environ==0.8.1
 django-redis==5.0.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+psycopg2-binary==2.9.1
+ 
+
