--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -5,40 +5,21 @@ services:
   django:
     build:
       dockerfile: ./dockerfile.dev
-    volumes:
-      - .:/src/:rw
-    environment:
-      - ip=0.0.0.0
-      - port=8000
-      - settings=config.settings.dev
-      - requirements=/src/requirements/dev.txt
+      args:
+        - REQUIREMENTS_FILE=${REQUIREMENTS_FILE}
     depends_on:
       - redis
       - postgres
-    ports:
-      - "8181:8000"
 
   redis:
     image: redis:alpine
     restart: always
-    expose:
-      - 6380
-    ports:
-      - 6380:6379
 
   postgres:
     image: postgres:alpine
     restart: always
-    environment:
-      - POSTGRES_DB=djangoFaino
-      - POSTGRES_USER=django
-      - POSTGRES_PASSWORD=django-password
     volumes:
       - db-data:/var/lib/postgresql/data:rw
-    expose:
-      - 5433
-    ports:
-      - 5433:5432
 
 volumes:
   db-data:
