--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -4,9 +4,9 @@ services:
     volumes:
       - .:/src/:rw
     env_file:
-      - ./uvicorn.dev.env
-      - ./django.dev.env
-      - ./postgres.dev.env
+      - .config/uvicorn.dev.env
+      - .config/django.dev.env
+      - .config/postgres.dev.env
     command: >
       uvicorn config.asgi:application 
           --reload 
@@ -19,7 +19,7 @@ services:
 
   postgres:
     env_file:
-      - ./postgres.dev.env
+      - ./config/postgres.dev.env
     volumes:
       - db-data-test:/var/lib/postgresql/data:rw
 
