--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -4,9 +4,9 @@ services:
     volumes:
       - .:/src/:rw
     env_file:
-      - .config/uvicorn.dev.env
-      - .config/django.dev.env
-      - .config/postgres.dev.env
+      - ./config/uvicorn.dev.env
+      - ./config/django.dev.env
+      - ./config/postgres.dev.env
     command: >
       uvicorn config.asgi:application 
           --reload 
