add nginx service to docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,10 @@ services:
     restart: always
     volumes:
       - db-data:/var/lib/postgresql/data:rw
+  nginx:
+    build:
+      dockerfile: ./nginx/dockerfile
+    restart: always
 
 volumes:
   db-data:
