--- a/ngnix/ngnix.conf
+++ b/ngnix/ngnix.conf
@@ -1,14 +1,34 @@
+http {
+  server {
+    listen 80;
+    client_max_body_size 4G;
 
-server {
-    listen 8080;
+    server_name example.com;
+
     location / {
-        proxy_pass http://django:80;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_redirect off;
+      proxy_buffering off;
+      proxy_pass http://uvicorn;
     }
-    location /static/ {
-        alias /statics/;
-    }
-}
 
+    # location /static {
+    #   # path for static files
+    #   root /path/to/app/static;
+    # }
+  }
+
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+  }
+
+  upstream uvicorn {
+    server http://django:$DJANGO_PORT;
+  }
+
+}
