change context path of nginx serive

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,8 @@ services:
       - db-data:/var/lib/postgresql/data:rw
   nginx:
     build:
-      dockerfile: ./nginx/dockerfile
+      context: ./nginx
+      dockerfile: ./dockerfile
     restart: always
 
 volumes:
