--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       - db-data:/var/lib/postgresql/data:rw
   nginx:
     build:
-      context: ./nginx
+      context: nginx
       dockerfile: ./dockerfile
     restart: always
 
