change context path of nginx serive

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,8 +21,7 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data:rw
   nginx:
-    build:
-      dockerfile: nginx/dockerfile
+    build: ./ngnix
     restart: always
 
 volumes:
