--- a/dockerfile.nginx
+++ b/dockerfile.nginx
@@ -1,3 +1,4 @@
 FROM nginx:1.21.6-alpine
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./config/nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./config/nginx.conf /etc/nginx/templates/default.conf.template
+
