comment service_name

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,7 +3,7 @@
     listen 80;
     client_max_body_size 4G;
 
-    server_name example.com;
+    # server_name example.com;
 
     location / {
       proxy_set_header Host $http_host;
