defice static for serving statics

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -16,10 +16,10 @@
       proxy_pass http://uvicorn;
     }
 
-    # location /static {
-    #   # path for static files
-    #   root /path/to/app/static;
-    # }
+    location /static {
+      # path for static files
+      root /statics/;
+    }
   }
 
   map $http_upgrade $connection_upgrade {
