--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -8,19 +8,7 @@ services:
       - ./config/uvicorn.dev.env
       - ./config/django.dev.env
       - ./config/postgres.dev.env
-    command:
-      - /bin/bash
-      - -c
-      - |
-        python3 manage.py collectstatic --noinput 
-        python3 manage.py makemigrations --noinput
-        python3 manage.py migrate --noinput
-        uvicorn config.asgi:application 
-          --reload 
-          --host ${DJANGO_IP} 
-          --port ${DJANGO_PORT} 
-          --workers ${WORKERS_COUNT_UVICORN} 
-          ${EXTRA_UVICORN_ARGS}
+    entrypoint: [ "bash", "./entrypoint.dev.sh" ]
 
   postgres:
     env_file:
