change name vars

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -13,7 +13,7 @@
       proxy_set_header Connection $connection_upgrade;
       proxy_redirect off;
       proxy_buffering off;
-      proxy_pass http://uvicorn;
+      proxy_pass http://django;
     }
 
     location /static {
@@ -27,7 +27,7 @@
     '' close;
   }
 
-  upstream uvicorn {
+  upstream django {
     server django:${DJANGO_PORT};
   }
 
