--- a/config/uvicorn.dev.env
+++ b/config/uvicorn.dev.env
@@ -1,6 +1,6 @@
 # Django & Nginx Service
-DJANGO_IP="0.0.0.0" # This Env Required for Django Service and Nginx Server For Mapping Networks
-DJANGO_PORT=8181    # This Env Required for Django Service and Nginx Server For Mapping Networks
+DJANGO_IP="0.0.0.0" 
+DJANGO_PORT=8181    
 # Uvicorn Service
-WORKERS_COUNT_UVICORN=2
-EXTRA_UVICORN_ARGS= # Empty
+WORKERS_COUNT=2
+EXTRA_ARGS= 
