--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -5,7 +5,7 @@ services:
       - .:/src/:rw
       - statics:/src/static:rw
     env_file:
-      - ./config/uvicorn.dev.env
+      - ./config/gunicorn.dev.env
       - ./config/django.dev.env
       - ./config/postgres.dev.env
     entrypoint: [ "bash", "./entrypoint.dev.sh" ]
@@ -20,7 +20,7 @@ services:
     depends_on:
       - django
     env_file:
-      - ./config/uvicorn.dev.env
+      - ./config/gunicorn.dev.env
     ports:
       - 8000:80
     volumes:
